--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
@@ -20,8 +20,20 @@
     <link rel="stylesheet" href="~/css/shop.css">
     <link rel="stylesheet" href="~/css/custom-home-details-wishlist.css" />
 }
+<!--提示訊息-->
+<div class="toast-container position-fixed top-25 start-50 translate-middle">
 
-
+    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <img src="..." class="rounded me-2" alt="...">
+            <strong class="me-auto">訊息</strong>
+            <small></small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+        </div>
+    </div>
+</div>
 <!-- Start All Title Box -->
 <div class="categories-shop">
     <div class="container">
