--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -38,7 +38,7 @@
 
         .swiper-pagination-bullet,
         .swiper-pagination-bullet-active {
-            background: #fff;
+            background: orange;
         }
 
         .swiper-slide h2 {
@@ -54,6 +54,10 @@
         .swiper-3d .swiper-slide-shadow-left,
         .swiper-3d .swiper-slide-shadow-right {
             background-image: none;
+        }
+
+        .checked{
+            color:orange;
         }
     </style>
 }
@@ -297,7 +301,7 @@
 
 <div class="container mt-3">
     <div class="home-title text-center">
-        <h1>貓寵補給站</h1>
+        <h1>推薦好評</h1>
     </div>
     <div class="swiper pt-3 pb-3">
         <div class="swiper-wrapper pb-4" id="swipers">
