--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Checkout.cshtml
@@ -1183,7 +1183,7 @@
                     <hr>
                 </div>
             </div>
-            <form id="form" name="form" method="POST" action="https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5">
+            <form id="ecpayform" name="form" method="POST" action="https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5">
                 <!--step2 : 收到後端的值印出來-->
                 <div class=" coupon-box-btn col-12 d-flex shopping-box ">
                     <button type="submit" id="submit-order-btn"
