++判斷是否停售/修bug

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
@@ -58,9 +58,9 @@
                                                     <div class="ml-5 mt-2">
                                                             <a href="@Url.Action("ShopDetail", "Index", new {pId = item.cId })" class="shop-prod-click nav-link">@item.cName</a>
                                                         <div class="">
-                                                                <select data-product-id=@item.cId class="input-attr form-select for-detail-select me-4">
+                                                            <select data-product-id=@item.cId class="input-attr form-select for-detail-select me-4">
 
-                                                                    @if (item.c子項目 != null && item.c其他子項目!=null)
+                                                                @if (item.c子項目 != null && item.c其他子項目!=null)
                                                                 {
                                                                         <option value="@item.c子項目" selected>@item.c子項目</option>
 
@@ -215,7 +215,7 @@
         $.ajax({
             url: '/ProductApi/CartEditQuantity',
             type: 'POST',
-            data: { newQuantity: newValue, pId:productId, attr=attr },
+            data: { newQuantity: newValue, pId:productId, attr: attr },
             dataType: 'json',
             success: function (response) {
                 console.log('Quantity updated:', response.message);
@@ -229,18 +229,20 @@
         
     //動作:變更購物車內的項目，傳回值，在後端/ProductApi / CartEditQuantity中更新至session
         var oldAttr; // 儲存舊值的變數
-
         // 在點擊下拉選單時更新舊值變數
-        
-        inputAttrinputAttr.on('focus', function () {
-            // 在輸入框獲取焦點時，將當前的值存入舊值變數中
+        inputAttr.on('click', function () {
+            // 在點擊下拉選單時，將當前的值存入舊值變數中
             oldAttr = $(this).val();
-        }).on('change', function () {
+            console.log('Old attr:', oldAttr);
+        });
+        
+        
+        inputAttr.on('change', function () {
             var newAttr = $(this).val(); // 獲取輸入的新值
 
             var productId = $(this).data('product-id');
             console.log('New attr:', newAttr);
-            console.log('New attr:', oldAttr);
+            console.log('old attr:', oldAttr);
             // 在這裡可以使用 Ajax 將新值和舊值傳回後端
             $.ajax({
                 url: '/ProductApi/CartEditAttribute',
@@ -256,6 +258,7 @@
                 }
             });
         });
+
         // 點擊商品時獲取識別ID
         var goToDetail = $('#goToDetail');
 
