--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -61,7 +61,7 @@
 <!-- Modal -->
 <div class="toast-container position-fixed top-25 start-50 translate-middle">
     
-    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div id="live-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
             <img src="..." class="rounded me-2" alt="...">
             <strong class="me-auto">訊息</strong>
@@ -514,8 +514,8 @@
                         }
                     }
                     else {
-                        $('.toast .toast-body').text(response.message);
-                        $('.toast').toast('show');
+                        $('#live-toast .toast-body').text(response.message);
+                        $('#live-toast').toast('show');
                     }
                 },
                 error: function (error) {
@@ -545,8 +545,8 @@
                         }
                     }
                     else {
-                        $('.toast .toast-body').text(response.message);
-                        $('.toast').toast('show');
+                        $('#live-toast .toast-body').text(response.message);
+                        $('#live-toast').toast('show');
                     }
 
                 },
