--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
@@ -23,7 +23,7 @@
 <!--提示訊息-->
 <div class="toast-container position-fixed top-25 start-50 translate-middle">
 
-    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
             <img src="..." class="rounded me-2" alt="...">
             <strong class="me-auto">訊息</strong>
