--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -54,8 +54,14 @@
                     role="button">
                 新增優惠券
             </button>
+            <button class="btn btn-primary" data-bs-toggle="modal" href="#sendtoMember"
+                    role="button">
+                發送優惠券
+            </button>
         </div>
     </div>
+
+
 
     <!---新增優惠券 modal-->
     <div class="modal fade" id="addModalToggle" aria-hidden="true"
@@ -233,12 +239,9 @@
                                                 <input type="text" class="form-control">
                                             </div>
                                             <div class="col-md-6">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                <label class="form-check-label" for="flexCheckDefault">
-                                                    發送至所有會員
-                                                </label>
-                                            </div>
+                                                <form method="post" asp-action="SendCouponToMembers">
+                                                    <button type="submit">發送優惠券給所有會員</button>
+                                                </form>
                                             </div>
 
                                             <button type="submit" class="mt-3 btn btn-primary btn-block"
