--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
@@ -58,7 +58,7 @@
                                                     <div class="ml-5 mt-2">
                                                             <a href="@Url.Action("ShopDetail", "Index", new {pId = item.cId })" class="shop-prod-click nav-link">@item.cName</a>
                                                         <div class="">
-                                                            <select data-product-id=@item.cId class="input-attr form-select for-detail-select me-4">
+                                                            <select data-product-id=@item.cId class="sel-attr form-select for-detail-select me-4">
 
                                                                 @if (item.c子項目 != null && item.c其他子項目!=null)
                                                                 {
@@ -202,13 +202,13 @@
     <script src="~/js/custom.js"></script>
     <script>
     //動作:變更購物車內的數量，傳回值，在後端/ProductApi/CartEditQuantity中更新至session
+        var cartItem=$('.shop-prod-click');
         var inputQuantity = $('.input-quantity');
-        var inputAttr = $('.input-attr');
-        
 
-    inputQuantity.on('change', function () {
+        inputQuantity.on('change', function () {
         var newValue = $(this).val();// 獲取輸入的新值
-        var attr = inputAttr.val();//獲取選到的值
+        var selAttrForQuantity = $(this).closest('.row').find('.sel-attr'); // 選取同一行內的子選項
+        var attr = selAttrForQuantity.val();//獲取選到的商品的子選項
         var productId = $(this).data('product-id')
         console.log('New value:', newValue);
         // 在這裡可以使用 Ajax 將新值傳回後端
@@ -228,16 +228,17 @@
 
         
     //動作:變更購物車內的項目，傳回值，在後端/ProductApi / CartEditQuantity中更新至session
+        var selAttr = $('.sel-attr');
         var oldAttr; // 儲存舊值的變數
         // 在點擊下拉選單時更新舊值變數
-        inputAttr.on('click', function () {
+        selAttr.on('click', function () {
             // 在點擊下拉選單時，將當前的值存入舊值變數中
             oldAttr = $(this).val();
             console.log('Old attr:', oldAttr);
         });
-        
-        
-        inputAttr.on('change', function () {
+
+
+        selAttr.on('change', function () {
             var newAttr = $(this).val(); // 獲取輸入的新值
 
             var productId = $(this).data('product-id');
