--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -54,10 +54,6 @@
                     role="button">
                 新增優惠券
             </button>
-            <button class="btn btn-primary" data-bs-toggle="modal" href="#sendtoMember"
-                    role="button">
-                發送優惠券
-            </button>
         </div>
     </div>
 
@@ -149,7 +145,8 @@
                             <th>內容</th>
                             <th>到期日</th>
                             <th>總數量</th>
-                            <th>是否可使用</th>
+                            <th>是否可使用</th>                            
+                            <th>發送至會員</th>
                             <th>編輯/刪除</th>
                         </tr>
                     </thead>
@@ -239,15 +236,18 @@
                                                 <input type="text" class="form-control">
                                             </div>
                                             <div class="col-md-6">
-                                                <form method="post" asp-action="SendCouponToMembers">
-                                                    <button type="submit">發送優惠券給所有會員</button>
-                                                </form>
+                                                <button type="submit" class="mt-3 btn btn-primary btn-block" name="SendCouponToAllMembers" id=" SendCouponToAllMembers"
+                                                        style="width: 100%;">
+                                                    發送優惠券給所有會員
+                                                </button>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <button type="submit" class="mt-3 btn btn-primary btn-block" name="SendCouponToMembers" id=" SendCouponToMembers"
+                                                        style="width: 100%;">
+                                                    發送
+                                                </button>
                                             </div>
 
-                                            <button type="submit" class="mt-3 btn btn-primary btn-block"
-                                                    style="width: 100%;">
-                                                儲存
-                                            </button>
                                         </div>
                                         <!--內容表單-->
                                     </div>
@@ -304,6 +304,14 @@
                 { "data": "expiryDate" },
                 { "data": "totalQuantity" },
                 { "data": "usable" },
+                {
+                    "data": "couponId",
+                    "render": function (data, type, row) {
+                        var sendUrl = '@Url.Action("SendCouponToMembers", "Bonus", new { area = "AdminCMS", id = "couponId" })';
+                        sendUrl = sendUrl.replace('couponId', row.couponId);
+                        return `<button class="btn btn-primary SendCouponToAllMembers" data-id="${row.couponId}" data-bs-toggle="modal">發送至所有會員</button>`
+                    }
+                },
                 {
                     "data": "couponId",
                     "render": function (data, type, row) {
@@ -481,6 +489,41 @@
                 });
             });
         });
+
+        //發送至會員=======================
+        $(document).ready(function () {
+            $(document).on("click", ".SendCouponToAllMembers", function () {
+                var couponId = $(this).data("id");
+
+                Swal.fire({
+                    title: '確定要發送優惠券嗎?',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: '確認發送'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            url: "/AdminCMS/Bonus/SendCouponToMembers",
+                            type: "POST",
+                            data: { id: couponId },
+                            success: function (response) {
+                                if (response.success) {
+                                    console.log("發送成功");
+                                } else {
+                                    console.log("發送失敗");
+                                }
+                            },
+                            error: function (error) {
+                                console.log("發生錯誤：", error);
+                            }
+                        });
+                    }
+                });
+            });
+        });
+
 
     </script>
 }
